<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_login"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_login_username"
            android:background="@drawable/edit_text_holo_light"
            android:minWidth="250dip"
            android:layout_marginTop="15dip"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:text="@string/error_prompt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="gone" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="#B5B5B6"
            android:text="@string/signin_prompt_login"
            android:textColor="#545454"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        
    </LinearLayout>

</ScrollView>
